--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -1,10 +1,10 @@
 PREDEF:
-  - preface.re
+  - scripts/preface.re
 
 CHAPS:
-  - article.re
+  - scripts/article.re
 
 APPENDIX:
 
 POSTDEF:
-  - contributors.re
+  - scripts/contributors.re
