--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         node-version: '20'
     - run: npm ci
+    - uses: TechBooster/ReVIEW-build-artifact-action@master
     - uses: tsuyoshicho/action-textlint@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
