--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -1,10 +1,10 @@
 PREDEF:
-  - body/preface.re
+  - preface.re
 
 CHAPS:
-  - body/article.re
+  - article.re
 
 APPENDIX:
 
 POSTDEF:
-  - body/contributors.re
+  - contributors.re
