--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,15 @@
 				"tomoki1207.pdf"
 			],
 			"settings": {
-				"editor.wordWrap": "on"
+				"editor.wordWrap": "on",
+				"explorer.sortOrder": "type",
+				"explorer.openEditors.sortOrder": "alphabetical",
+				"editor.minimap.enabled": false,
+				"editor.renderWhitespace": "all",
+				"editor.renderControlCharacters": true,
+				"editor.renderIndentGuides": true,
+				"editor.renderLineHighlight": "all"
+				
 			}
 		}
 	},
