devcontainer設定を削除、ディレクトリ構成を変更、markdownでの執筆を前提に変更等

--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -27,5 +27,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-pr-review
         level: warning
-        textlint_flags: "./articles/**/*.re"
+        textlint_flags: "./articles/**/*.md"
         fail_on_error: true
