--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ Gemfile.lock
 articles/*.pdf
 articles/*.epub
 articles/*.html
-# articles/*.md
 articles/*.xml
 articles/*.txt
+articles/_refiles/
+
+.idea
+out/
