--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -9,8 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: TechBooster/ReVIEW-build-artifact-action@master
+    - run: ./setup.sh
+    - run: ./build.sh
     - uses: actions/upload-artifact@v4
       with:
         name: Output documents
-        path: ./articles/*.pdf
+        path: ./out/*.pdf
