--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -20,8 +20,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20'
-    - run: npm ci
-    - uses: TechBooster/ReVIEW-build-artifact-action@master
+    - run: ./setup.sh
+    - run: ./build.sh
     - uses: tsuyoshicho/action-textlint@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
