--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - run: ./setup.sh
-    - run: ./build.sh
+    - run: ./scripts/setup.sh
+    - run: ./scripts/build.sh
     - uses: actions/upload-artifact@v4
       with:
         name: Output documents
