--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -25,5 +25,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-pr-review
         level: warning
-        textlint_flags: "./articles/**/*.md"
+        textlint_flags: "./articles/main/**/*.md"
         fail_on_error: true
