CIでビルドを追加

--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '20'
+    - run: docker compose up
     - uses: tsuyoshicho/action-textlint@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
